styling: prevent overflow of overlay

--- a/src/components/ResourceCalendar/style.css
+++ b/src/components/ResourceCalendar/style.css
@@ -22,6 +22,7 @@
     display: flex;
     align-items: center;   
     position: absolute;
+    overflow: hidden;
 }
 
 .resource-calendar .cell-overlay:hover {
